--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/blb
-spring.datasource.username=student
-spring.datasource.password=Memeshaha123
+spring.datasource.url=jdbc:mysql://mysql680.loopia.se:3306/ensotech_io?autoReconnect=true&cmaxReconnets=5&initialTimeout=1
+spring.datasource.username=balumbo@e338621
+spring.datasource.password=!Balumbo1337
 
 spring.servlet.multipart.max-file-size=10MB
 
